# Formula1

./: .gitignore  Formula 1 - Custom Tuning for RandomForestRegressor.ipynb  Formula 1 - Custom Tuning for XGBRegressor.ipynb  Formula 1 - Modelling - Random Forest.ipynb  Formula 1 - Modelling.ipynb  Formula 1 - Visualisation 2.ipynb  README.md
.ipynb_checkpoints/: Capstone Project - William George - Formula 1-checkpoint.ipynb  Formula 1 - Custom Tuning for XGBRegressor-checkpoint.ipynb  Formula 1 - Data Collection-checkpoint.ipynb  Formula 1 - Modelling - Random Forest-checkpoint.ipynb  Formula 1 - Visualisation-checkpoint.ipynb  README-checkpoint.ipynb
CSV/: age_points.csv  constructor_issues 2.csv  constructor_issues_faults 2.csv  constructor_standings.csv  database.csv  driver_issues 2.csv  driver_issues_faults.csv  driver_standings.csv  h.csv  home_races 2.csv  main_df.csv  merged_database 2.csv  (+1 more)
v2/: .env.example  .gitignore  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
v2/config/: default.yaml
v2/src/f1_predictor/: __init__.py  __main__.py
v2/src/f1_predictor/api/: __init__.py  app.py  routers.py
v2/src/f1_predictor/cli/: __init__.py  main.py
v2/src/f1_predictor/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
v2/src/f1_predictor/data/: __init__.py  collectors.py  storage.py
v2/src/f1_predictor/data/clients/: __init__.py  ergast.py  scrapers.py
v2/src/f1_predictor/data/schemas/: __init__.py  models.py
v2/src/f1_predictor/evaluation/: __init__.py  metrics.py  reports.py
v2/src/f1_predictor/features/: __init__.py  age.py  pipeline.py  qualifying.py  splits.py  weather.py
v2/src/f1_predictor/models/: __init__.py  registry.py  training.py  transformers.py  xgboost_model.py
v2/src/f1_predictor/postprocessing/: __init__.py  points.py  positions.py  standings.py
v2/tests/: __init__.py  conftest.py  test_model.py  test_points.py  test_positions.py  test_qualifying.py  test_weather.py
